posiGen_FullsendBox/src/objects/Employee_Equipment__c.object
<CustomObject>
    <description>Object to hold Employee Equipment records</description>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Machine_Name__c</fullName>
        <label>Machine Name</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Equipment&apos;s Phone Number</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost/Stolen/Broken</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Employee Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Employee__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Machine_Name__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Lost/Stolen/Broken</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Employee Equipment Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>